Fixed position of status icon on mobile

--- a/directory-ui/src/components/Service.css
+++ b/directory-ui/src/components/Service.css
@@ -1,6 +1,9 @@
 
 
 @media (max-width: 575px) {
+	.service__status {
+		width: auto;
+	}
 
   /* Force table to not be like tables anymore */
 	table, thead, tbody, th, td, tr {
